updated text to use Verdana

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -938,96 +938,97 @@
             <div class="sheet-oracle-box">
                 <div class="sheet-oracle-title">Plot Oracles</div>
                 <div class="sheet-oracle">
+                    <button type="roll" id="actionOracleRoll" title="Action Oracle" name="rollactionoracle" value="&{template:ironswornoracles} {{header=Action Oracle}} {{action=[[1d100]]}}"></button>
                     <label class="sheet-oracle-show" for="actionOracle">Action</label>
                 </div>
                 <div class="sheet-oracle">
-                    Theme: <button type="roll" title="Theme Oracle" name="rollthemeoracle" value="&{template:ironswornoracles} {{header=Theme Oracle}} {{theme=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="themeOracle">Show</label>
+                    <button type="roll" title="Theme Oracle" name="rollthemeoracle" value="&{template:ironswornoracles} {{header=Theme Oracle}} {{theme=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="themeOracle">Theme</label>
                 </div>
                 <div class="sheet-oracle">
-                    Combat Actions: <button type="roll" title="Combat Actions Oracle" name="rollcombatactionoracle" value="&{template:ironswornoracles} {{header=Combat Actions Oracle}} {{combatAction=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="combatActionOracle">Show</label>
+                    <button type="roll" title="Combat Actions Oracle" name="rollcombatactionoracle" value="&{template:ironswornoracles} {{header=Combat Actions Oracle}} {{combatAction=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="combatActionOracle">Combat Actions</label>
                 </div>
                 <div class="sheet-oracle">
-                    Settlement Trouble: <button type="roll" title="Settlement Trouble Oracle" name="rollsettlementtroubleoracle" value="&{template:ironswornoracles} {{header=Settlement Trouble Oracle}} {{settlementTrouble=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="settlementTroubleOracle">Show</label>
+                    <button type="roll" title="Settlement Trouble Oracle" name="rollsettlementtroubleoracle" value="&{template:ironswornoracles} {{header=Settlement Trouble Oracle}} {{settlementTrouble=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="settlementTroubleOracle">Settlement Trouble</label>
                 </div>
                 <div class="sheet-oracle">
-                    Major Plot Twist: <button type="roll" title="Major Plot Twist Oracle" name="rollmajorplottwistoracle" value="&{template:ironswornoracles} {{header=Major Plot Twist Oracle}} {{majorPlotTwist=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="majorPlotTwistOracle">Show</label>
+                    <button type="roll" title="Major Plot Twist Oracle" name="rollmajorplottwistoracle" value="&{template:ironswornoracles} {{header=Major Plot Twist Oracle}} {{majorPlotTwist=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="majorPlotTwistOracle">Major Plot Twist</label>
                 </div>
                 <div class="sheet-oracle">
-                    Mystic Backlash: <button type="roll" title="Mystic Backlash Oracle" name="rollmysticbacklashoracle" value="&{template:ironswornoracles} {{header=Mystic Backlash Oracle}} {{mysticBacklash=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="mysticBacklashOracle">Show</label>
+                    <button type="roll" title="Mystic Backlash Oracle" name="rollmysticbacklashoracle" value="&{template:ironswornoracles} {{header=Mystic Backlash Oracle}} {{mysticBacklash=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="mysticBacklashOracle">Mystic Backlash</label>
                 </div>
                 <div class="sheet-oracle">
-                    Challenge Rank: <button type="roll" title="Challenge Rank Oracle" name="rollchallengerankoracle" value="&{template:ironswornoracles} {{header=Challenge Rank Oracle}} {{challengeRank=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="challengeRankOracle">Show</label>
+                    <button type="roll" title="Challenge Rank Oracle" name="rollchallengerankoracle" value="&{template:ironswornoracles} {{header=Challenge Rank Oracle}} {{challengeRank=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="challengeRankOracle">Challenge Rank</label>
                 </div>
             </div>
             <div class="sheet-oracle-box">
                 <div class="sheet-oracle-title">Locations</div>
                 <div class="sheet-oracle">
-                    Region: <button type="roll" title="Region Oracle" name="rollregionoracle" value="&{template:ironswornoracles} {{header=Region Oracle}} {{region=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="regionOracle">Show</label>
+                    <button type="roll" title="Region Oracle" name="rollregionoracle" value="&{template:ironswornoracles} {{header=Region Oracle}} {{region=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="regionOracle">Region</label>
                 </div>
                 <div class="sheet-oracle">
-                    Location: <button type="roll" title="Location Oracle" name="rollLocationoracle" value="&{template:ironswornoracles} {{header=location Oracle}} {{location=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="locationOracle">Show</label>
+                    <button type="roll" title="Location Oracle" name="rollLocationoracle" value="&{template:ironswornoracles} {{header=location Oracle}} {{location=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="locationOracle">Location</label>
                 </div>
                 <div class="sheet-oracle">
-                    Costal Waters Location: <button type="roll" title="Costal Waters Location Oracle" name="rollcostalwaterslocationoracle" value="&{template:ironswornoracles} {{header=Costal Waters Location Oracle}} {{costalWatersLocation=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="coastalWatersLocationOracle">Show</label>
+                    <button type="roll" title="Costal Waters Location Oracle" name="rollcostalwaterslocationoracle" value="&{template:ironswornoracles} {{header=Costal Waters Location Oracle}} {{costalWatersLocation=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="coastalWatersLocationOracle">Costal Waters Location</label>
                 </div>
                 <div class="sheet-oracle">
-                    Location Descriptor: <button type="roll" title="Location Descriptor Oracle" name="rolllocationdescriptororacle" value="&{template:ironswornoracles} {{header=Location Descriptor Oracle}} {{locationDescriptor=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="locationDescriptorOracle">Show</label>
+                    <button type="roll" title="Location Descriptor Oracle" name="rolllocationdescriptororacle" value="&{template:ironswornoracles} {{header=Location Descriptor Oracle}} {{locationDescriptor=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="locationDescriptorOracle">Location Descriptor</label>
                 </div>
                 <div class="sheet-oracle">
-                    Settlement Name: <button type="roll" title="Settlement Name Oracle" name="rollsettlementnameoracle" value="&{template:ironswornoracles} {{header=Settlement Name Oracle}} {{settlementName=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="settlementNameOracle">Show</label>
+                    <button type="roll" title="Settlement Name Oracle" name="rollsettlementnameoracle" value="&{template:ironswornoracles} {{header=Settlement Name Oracle}} {{settlementName=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="settlementNameOracle">Settlement Name</label>
                 </div>
                 <div class="sheet-oracle">
-                    Quick Settlement Name: <button type="roll" title="Quick Settlement Name Oracle" name="rollquicksettlementnameoracle" value="&{template:ironswornoracles} {{header=Quick Settlement Name Oracle}} {{quickSettlementNamePrefix=[[1d100]]}} {{quickSettlementNameSuffix=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="quickSettlementNameOracle">Show</label>
+                    <button type="roll" title="Quick Settlement Name Oracle" name="rollquicksettlementnameoracle" value="&{template:ironswornoracles} {{header=Quick Settlement Name Oracle}} {{quickSettlementNamePrefix=[[1d100]]}} {{quickSettlementNameSuffix=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="quickSettlementNameOracle">Quick Settlement Name</label>
                 </div>
             </div>
             <div class="sheet-oracle-box">
                 <div class="sheet-oracle-title">Character Oracles</div>
                 <div class="sheet-oracle">
-                    Character Role: <button type="roll" title="Character Role Oracle" name="rollcharacterroleoracle" value="&{template:ironswornoracles} {{header=Character Role Oracle}} {{characterRole=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="characterRoleOracle">Show</label>
+                    <button type="roll" title="Character Role Oracle" name="rollcharacterroleoracle" value="&{template:ironswornoracles} {{header=Character Role Oracle}} {{characterRole=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="characterRoleOracle">Character Role</label>
                 </div>
                 <div class="sheet-oracle">
-                    Character Goal: <button type="roll" title="Character Goal Oracle" name="rollcharactergoaloracle" value="&{template:ironswornoracles} {{header=Character Goal Oracle}} {{characterGoal=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="characterGoalOracle">Show</label>
+                    <button type="roll" title="Character Goal Oracle" name="rollcharactergoaloracle" value="&{template:ironswornoracles} {{header=Character Goal Oracle}} {{characterGoal=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="characterGoalOracle">Character Goal</label>
                 </div>
                 <div class="sheet-oracle">
-                    Character Descriptor: <button type="roll" title="Character Descriptor Oracle" name="rollcharacterdescriptororacle" value="&{template:ironswornoracles} {{header=Character Descriptor Oracle}} {{characterDescriptor=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="characterDescriptorOracle">Show</label>
+                    <button type="roll" title="Character Descriptor Oracle" name="rollcharacterdescriptororacle" value="&{template:ironswornoracles} {{header=Character Descriptor Oracle}} {{characterDescriptor=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="characterDescriptorOracle">Character Descriptor</label>
                 </div>
             </div>
             <div class="sheet-oracle-box">
                 <div class="sheet-oracle-title">Character Names</div>
                 <div class="sheet-oracle">
-                    Ironlander Names: <button type="roll" title="Ironlander Names Oracle" name="rollironlandernamesoracle" value="&{template:ironswornoracles} {{header=Ironlander Names Oracle}} {{ironlanderNames=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="ironlanderNamesOracle">Show</label>
+                    <button type="roll" title="Ironlander Names Oracle" name="rollironlandernamesoracle" value="&{template:ironswornoracles} {{header=Ironlander Names Oracle}} {{ironlanderNames=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="ironlanderNamesOracle">Ironlander Names</label>
                 </div>
                 <div class="sheet-oracle">
-                    Elf Names: <button type="roll" title="Elf Names Oracle" name="rollElf Namesoracle" value="&{template:ironswornoracles} {{header=Elf Names Oracle}} {{elfNames=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="elfNamesOracle">Show</label>
+                    <button type="roll" title="Elf Names Oracle" name="rollElf Namesoracle" value="&{template:ironswornoracles} {{header=Elf Names Oracle}} {{elfNames=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="elfNamesOracle">Elf Names</label>
                 </div>
                 <div class="sheet-oracle">
-                    Giant Names: <button type="roll" title="Giant Names Oracle" name="rollgiantnamesoracle" value="&{template:ironswornoracles} {{header=Giant Names Oracle}} {{giantNames=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="giantNamesOracle">Show</label>
+                    <button type="roll" title="Giant Names Oracle" name="rollgiantnamesoracle" value="&{template:ironswornoracles} {{header=Giant Names Oracle}} {{giantNames=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="giantNamesOracle">Giant Names</label>
                 </div>
                 <div class="sheet-oracle">
-                    Varou Names: <button type="roll" title="Varou Names Oracle" name="rollvarounamesoracle" value="&{template:ironswornoracles} {{header=Varou Names Oracle}} {{varouNames=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="varouNamesOracle">Show</label>
+                    <button type="roll" title="Varou Names Oracle" name="rollvarounamesoracle" value="&{template:ironswornoracles} {{header=Varou Names Oracle}} {{varouNames=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="varouNamesOracle">Varou Names</label>
                 </div>
                 <div class="sheet-oracle">
-                    Troll Names: <button type="roll" title="Troll Names Oracle" name="rolltrollnamesoracle" value="&{template:ironswornoracles} {{header=Troll Names Oracle}} {{trollNames=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="trollNamesOracle">Show</label>
+                    <button type="roll" title="Troll Names Oracle" name="rolltrollnamesoracle" value="&{template:ironswornoracles} {{header=Troll Names Oracle}} {{trollNames=[[1d100]]}}"></button>
+                    <label class="sheet-oracle-show" for="trollNamesOracle">Troll Names</label>
                 </div>
             </div>
         </div>
