updated font size

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -2139,7 +2139,7 @@
                     <div class="oracle-row"><span class="oracle-roll">1-3</span><span class="sheet-oracle-result">A new danger appears.</span></div>
                     <div class="oracle-row"><span class="oracle-roll">1-3</span><span class="sheet-oracle-result">Someone or something goes missing.</span></div>
                     <div class="oracle-row"><span class="oracle-roll">1-3</span><span class="sheet-oracle-result">The truth of a relationship is revealed.</span></div>
-                    <div class="oracle-row"><span class="oracle-roll">1-3</span><span class="sheet-oracle-result">Two seemingly unrelated situations are shown to be connected</span>.</div>
+                    <div class="oracle-row"><span class="oracle-roll">1-3</span><span class="sheet-oracle-result">Two seemingly unrelated situations are shown to be connected.</span></div>
                     <div class="oracle-row"><span class="oracle-roll">1-3</span><span class="sheet-oracle-result">Unexpected powers or abilities are revealed.</span></div>
                     <div class="oracle-row"><span class="oracle-roll">1-3</span><span class="sheet-oracle-result">Roll twice more on this table. Both results occur. If they are the same result, make it more dramatic.</span></div>
                 </div>
