[Knight] Bugfix Druid

--- a/Knight/knight.html
+++ b/Knight/knight.html
@@ -7893,7 +7893,7 @@ Effet : L’arme reçoit un bonus de 3 permanent aux dégâts qu’elle inflige.
 										<span title="Jumelé (Ambidextrie)"></span>
 									</label>
 									<label class="simple">
-										<input type="checkbox" name="attr_leste" value="{{leste=[[@{force}]]}}" />
+										<input type="checkbox" name="attr_leste" value="{{leste=[[@{druidLionChairTot}]]}}" />
 										<span title="Lesté"></span>
 									</label>
 									<label class="simple">
