[Ryuutama]: Add spell rolltemplate (#5728)
* [Ryuutama] adding spell template

* [Ryuutama]: spacing fixes

* [Ryuutama]: tiny css format fix

* [Ryuutama]: fix caps

--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -90,10 +90,10 @@
                 });
             });
         });
-        on("change:magicPoints", function() {
-            getAttrs(["magicPoints"], function(values) {
+        on("change:mentalPoints", function() {
+            getAttrs(["mentalPoints"], function(values) {
                 setAttrs({
-                    mpUnconscious: parseInt(values.magicPoints) <= 0 ? 1 : 0
+                    mpUnconscious: parseInt(values.mentalPoints) <= 0 ? 1 : 0
                 });
             });
         });
@@ -650,20 +650,29 @@
                         <label class='headerLabel spellsLabel'>Spells/Music/Other Abilities</label>
                     </div>
                     <fieldset class='repeating_spells'>
-                        <div class="sheet-row sheet-spellRow">
-                            <input type="text" name="attr_spellName" class="sheet-spellName" placeholder="Name">
-                            Duration:
-                            <input type="text" name="attr_spellDuration" class="sheet-spellDuration">
-                            Target:
-                            <input type="text" name="attr_spellTarget" class="sheet-spellTarget">
-                            Range:
-                            <input type="text" name="attr_spellRange" class="sheet-spellRange">
-                        </div>
-
-                        <div class="sheet-row sheet-spellRow">
-                            <textarea name="attr_spellEffect" class="sheet-spellEffect" placeholder="Effect"></textarea>
-                            <div class='spellDetails'>
-                                <span>Type:</span>
+                         <div class="sheet-spellRow flex">
+                            <div class='flex-column'>
+                                Name:
+                                <input type="text" name="attr_spellName" class="sheet-spellName" placeholder="Hold Hands">
+                            </div>
+                            <div class='flex-column'>
+                                MP:
+                                <input type="number" name="attr_spellCost" value="0" min="0">
+                            </div>
+                            <div class='flex-column'>
+                                Duration:
+                                <input type="text" name="attr_spellDuration" class="sheet-spellDuration" placeholder="Instant">
+                            </div>
+                            <div class='flex-column'>
+                                Target:
+                                <input type="text" name="attr_spellTarget" class="sheet-spellTarget" placeholder="1 Target">
+                            </div>
+                            <div class='flex-column'>
+                                Range:
+                                <input type="text" name="attr_spellRange" class="sheet-spellRange" placeholder="Touch">
+                            </div>
+                            <div class='flex-column'>
+                                Type:
                                 <select name="attr_spellType" class="sheet-spellTypes">
                                     <option value=""></option>
                                     <option value="Incantation">Incantation</option>
@@ -674,11 +683,14 @@
                                     <option value="Winter">Seasonal (Winter)</option>
                                     <option value="Other">Other</option>
                                 </select>
-                                <span>MP:</span>
-                                <input type="number" name="attr_spellCost" value="0" min="0">
                             </div>
-                            <hr>
                         </div>
+
+                        <div class="flex">
+                            <button type='roll' value='&{template:spell} {{name=@{spellName}}} {{cost=@{spellCost}}} {{duration=@{spellDuration}}} {{target=@{spellTarget}}} {{range=@{spellRange}}} {{effect=@{spellEffect}}} ' name='roll_repeatingSpellCard'></button>
+                            <textarea name="attr_spellEffect" class="sheet-spellEffect" placeholder="Effect"></textarea>
+                        </div>
+                        <hr>
                     </fieldset>
                 </span>
 
@@ -691,9 +703,9 @@
                             <input type='number' class='stats' name='attr_healthPoints' value='8'/> / <input type='number' class='stats' name='attr_healthPoints_max' value='8' min='1'/>
                         </div>
                         <div class='sheet-col'>
-                            <label class='headerLabel healthLabel'>Magic Points</label>
+                            <label class='headerLabel healthLabel'>Mental Points</label>
                             <input type='checkbox' class='penaltyCondition' name='attr_mpUnconscious' value='1'/>
-                            <input type='number' class='stats' name='attr_magicPoints' value='8' min='0'/> / <input type='number' class='stats' name='attr_magicPoints_max' value='8' min='1'/>
+                            <input type='number' class='stats' name='attr_mentalPoints' value='8' min='0'/> / <input type='number' class='stats' name='attr_mentalPoints_max' value='8' min='1'/>
                         </div>
                         <div class='sheet-col'>
                             <label class='headerLabel healthLabel'>Condition</label>
@@ -1651,5 +1663,39 @@
                     </div>
                 </div>
             </rolltemplate>
+            
+            <rolltemplate class="sheet-rolltemplate-spell">
+                <div class="rolltemplate-spellContainer">
+                        <div class='rolltemplate-spellCard'>
+                            <div class='rolltemplate-spellAttr flex-column'>
+                                <div class="rolltemplate-spellTitle">Spell</div>
+                                <div class='rolltemplate-spellAttrText'>{{name}}</div>
+                            </div>
+                            <div class='flex-column'>
+                                <div class="rolltemplate-spellTitle">MP</div>
+                                <div class='rolltemplate-spellAttrText'>{{cost}}</div>
+                            </div>
+                        </div>
+                        <div class='rolltemplate-spellCard'>
+                            <div class='rolltemplate-spellAttr flex-column'>
+                                <div class="rolltemplate-spellTitle">Duration</div>
+                                <div class='rolltemplate-spellAttrText'>{{duration}}</div>
+                            </div>
+                            <div class='rolltemplate-spellAttr flex-column'>
+                                <div class="rolltemplate-spellTitle">Target</div>
+                                <div class='rolltemplate-spellAttrText'>{{target}}</div>
+                            </div>
+                            <div class='flex-column'>
+                                <div class="rolltemplate-spellTitle">Range</div>
+                                <div class='rolltemplate-spellAttrText'>{{range}}</div>
+                            </div>
+                        </div>
+                        {{#effect}}
+                            <div class='rolltemplate-spellEffect'>{{effect}}</div>
+                        {{/effect}}
+                    </div>
+                </div>
+            </rolltemplate>
             <!-- End Roll Templates -->
+
 </html>
