--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -3162,8 +3162,8 @@
         })
     });
 
-    const derivedstats = ["usecharisma","useacademics","Corruption","potsmFame","izFirewall","hfGlory","DLGrit","neuraltoughness","ripReason","tdsanity","ripStatus","izStrain","izStreetCred"];
-    const derivedlabels = ["Charisma","Academics","Corruption","Fame","Firewall","Glory","Grit","Neural Toughness","Reason","Sanity","Status","Strain","Street Cred"];
+    const derivedstats = ["usecharisma","useacademics","Corruption","potsmFame","izFirewall","hfGlory","DLGrit","neuraltoughness","ripReason","tdsanity","ripStatus","izStrain","izStreetCred", "zStrainThree"];
+    const derivedlabels = ["Charisma","Academics","Corruption","Fame","Firewall","Glory","Grit","Neural Toughness","Reason","Sanity","Status","Strain","Street Cred", "Strain"];
     const derivedcurfields = ["@{charismaCur}","@{academicsCur}","@{corruptionCur}","@{fameCur}","@{FirewallCur}","@{gloryCur}","@{gritCur}","@{ntoughnesscur}","@{reasonCur}","@{sanityCur}","@{statusCur}","@{StrainCur}","@{StreetCredCur}"];
     const derivedStatBlock = function() {
         const toughnessstats = ["toughnessArmor","ntoughnessArmor"];
@@ -6108,10 +6108,9 @@
     							<div class="sheet-derivecurrent"><input type="number" name="attr_corruptionCur" title="@{corruptionCur}" class="sheet-derivedStat" readonly /></div>
     							<div class="sheet-derivemisc">&nbsp;</div>
     					    </div>
-    					    <!-- Street Cred -->
+    					    <!-- IZ Street Cred 2.0 -->
     					    <input type="checkbox" class="sheet-useStreetCred" style="width: 15px; display: none;" name="attr_izStreetCred" />
-    					    <input type="checkbox" class="sheet-useStrain" style="width: 15px; display: none;" name="attr_izStrain" />
-    					    <div class="sheet-basederived sheet-StreetCred sheet-Strain" style='font-weight: bold; font-size: .75em;'>
+    					    <div class="sheet-basederived sheet-StreetCred sheet-Strain sheet-Strain-Three" style='font-weight: bold; font-size: .75em;'>
     					        <div class="sheet-derivelabel">&nbsp;</div>
     					        <div class="sheet-derivebase" data-i18n="base">Base</div>
     					        <div class="sheet-derivemod" data-i18n="mod">Mod</div>
@@ -6125,7 +6124,8 @@
     							<div class="sheet-derivecurrent"><input type="number" name="attr_StreetCredCur" title="@{StreetCredCur}" class="sheet-derivedStat" readonly /></div>
     							<div class="sheet-derivemisc"><input type="number" name="attr_maxStreetCredCur" title="@{maxStreetCredCur}" class="sheet-derivedStat" value="10" /></div>
     					    </div>
-    					    <!-- Strain -->
+    					    <!-- IZ Strain 2.0 -->
+    					    <input type="checkbox" class="sheet-useStrain" style="width: 15px; display: none;" name="attr_izStrain" />
     					    <div class="sheet-basederived sheet-Strain">
     					        <div class="sheet-derivelabel" data-i18n="strain">Strain</div>
     					        <div class="sheet-derivebase">
@@ -6144,7 +6144,22 @@
     							    <input type="number" name="attr_StrainCur" title="@{StrainCur}" class="sheet-derivedStat sheet-strain" value="0" readonly />
     							</div>
     							<div class="sheet-derivemisc"><input class="sheet-derivedStat" type="number" name="attr_Strain_max" title="@{Strain_max}" /></div>
-    					    </div>
+							</div>
+							<!-- IZ 3.0 Strain -->
+							<input type="checkbox" class="sheet-useStrainThree" style="width: 15px; display: none;" name="attr_izStrainThree" />
+    					    <div class="sheet-basederived sheet-Strain-Three">
+								<div class="sheet-derivelabel" data-i18n="strain-three">Strain</div>
+								<div class="sheet-derivebase">
+    					            <input type="number" name="attr_StrainThree" title="@{strainthree}">
+    					        </div>
+    							<div class="sheet-derivemod"><input type="number" name="attr_StrainThreeMod" title="@{StrainThreeMod}" class="sheet-derivedStat" value="0" /></div>
+    							<div class="sheet-derivecurrent">
+    							    <input class="sheet-danger" type="checkbox" name="attr_straindanger" value="1" />
+    								<input class="sheet-critical" type="checkbox" name="attr_straincrit" value="1" />
+    							    <input type="number" name="attr_StrainCur" title="@{StrainCur}" class="sheet-derivedStat sheet-strain" value="0" readonly />
+    							</div>
+    							<div class="sheet-derivemisc"><input class="sheet-derivedStat" type="number" name="attr_StrainThree_max" title="@{StrainThree_max}" /></div>
+							</div>
     					</div>
     					<hr class="sheet-mischr" style="border: .45px dashed silver; margin: -4px 0px 8px 0px;"  />
     					<!-- Miscellaneous -->
@@ -8251,8 +8266,8 @@
     			        <!--Reason--><label class="sheet-dsItem" data-i18n-title="reason-text" title="Used in Rippers to measure one's sanity."><input type="checkbox" class="sheet-useReason" name="attr_ripReason" style="width: 15px;" /><span data-i18n="reason">Reason</span></label>
     			        <!--Sanity--><label class="sheet-dsItem" data-i18n-title="sanity-text" title="Used to track a character's sanity. Useful for most Horroresque settings. This is a derived stat based on (Spirit/2)+2."><input type="checkbox" class="sheet-useSanity" name="attr_tdsanity" style="width: 15px;" /><span data-i18n="sanity">Sanity</span></label>
     			        <!--Status--><label class="sheet-dsItem" data-i18n-title="status-text" title="A reflection of ones position in society, and the esteem with which others regard the hero. This is used in Rippers."><input type="checkbox" class="sheet-useStatus" name="attr_ripStatus" style="width: 15px;" /><span data-i18n="status">Status</span></label>
-    			        <!--Strain--><label class="sheet-dsItem" data-i18n-title="strain-text" title="Used to measure how much strain a character is under due to augmentation from bioware. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useStrain" style="width: 15px;" name="attr_izStrain" /><span data-i18n="strain">Strain</span></label>
-    			        <!--Street Cred--><label class="sheet-dsItem" data-i18n-title="street-cred-text" title="Used to measure a character's reputation on the streets. Base = 2 per Character Rank. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useStreetCred" style="width: 15px;" name="attr_izStreetCred" /><span data-i18n="street-cred">Street Cred</span></label>
+    			        <!--Strain IZ 2.0--><label class="sheet-dsItem" data-i18n-title="strain-text" title="Used to measure how much strain a character is under due to augmentation from bioware. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useStrain" style="width: 15px;" name="attr_izStrain" /><span data-i18n="strain">Strain</span></label>
+    			        <!--Street Cred IZ 2.0--><label class="sheet-dsItem" data-i18n-title="street-cred-text" title="Used to measure a character's reputation on the streets. Base = 2 per Character Rank. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useStreetCred" style="width: 15px;" name="attr_izStreetCred" /><span data-i18n="street-cred">Street Cred</span></label>
     			    </div>
     			</div>
     			<div class='sheet-configSection'>
