updated supply and health to use the new momentum

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -870,7 +870,7 @@
             <td class="sheet-resources" width="10%">
                 <div class="sheet-resources-box">
                     <button type="roll" title="Roll +Health" name="rollHealth"
-                        value="&{template:ironsworn} {{header=@{character_name} Roll +health}} {{name=Endure Harm}} {{action=[[1d6+@{health}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}}"></button>
+                        value="&{template:ironsworn} {{header=@{character_name} Roll +health}} {{name=Endure Harm}} {{action=[[1d6+@{health}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{health}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{health}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{health}+?{Modifier|0})-(@{momentum})]]}}"></button>
                     <h4>HEALTH</h4>
                 </div>
                 <div class="sheet-resources-box">
@@ -899,7 +899,7 @@
                 </div>
                 <div class="sheet-resources-title-box">
                     <button type="roll" title="Roll +Spirit" name="rollSpirit"
-                        value="&{template:ironsworn} {{header=@{character_name} Roll +spirit}} {{name=Test your Spirit}} {{action=[[1d6+@{spirit}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}}"></button>
+                        value="&{template:ironsworn} {{header=@{character_name} Roll +spirit}} {{name=Test your Spirit}} {{action=[[1d6+@{spirit}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{spirit}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{spirit}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{spirit}+?{Modifier|0})-(@{momentum})]]}}"></button>
                     <h4>SPIRIT</h4>
                 </div>
                 <div class="sheet-resources-box">
@@ -928,7 +928,7 @@
                 </div>
                 <div class="sheet-resources-title-box">
                     <button type="roll" title="Roll +Supply" name="rollSupply"
-                        value="&{template:ironsworn} {{header=@{character_name} Roll +supply}} {{name=Make Camp}} {{action=[[1d6+@{supply}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}}"></button>
+                        value="&{template:ironsworn} {{header=@{character_name} Roll +supply}} {{name=Make Camp}} {{action=[[1d6+@{supply}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{supply}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{supply}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{supply}+?{Modifier|0})-(@{momentum})]]}}"></button>
                     <h4>SUPPLY</h4>
                 </div>
                 <div class="sheet-resources-box">
