--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -807,12 +807,12 @@
                                 <td width="10%"><input type="checkbox" name="attr_debilMarked"><span></span>
                                 </td>
                                 <td width="40%">
-                                    <h5>Marked</h5>
+                                    <h5>Cursed</h5>
                                 </td>
                                 <td width="10%"><input type="checkbox" name="attr_debilHaunted"><span></span>
                                 </td>
                                 <td width="40%">
-                                    <h5>Haunted</h5>
+                                    <h5>Tormented</h5>
                                 </td>
                             </tr>
                             <tr>
