titles for oracles updated

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -3425,35 +3425,35 @@
         {{#payThePrice}}
         {{/payThePrice}}
         {{#endureHarm}}
-            {{#rollBetween() askTheOracle 1 10}}
+            {{#rollBetween() endureHarm 1 10}}
             <tr><td colspan='2'><span>The harm is mortal. <em>Face Death.</em></span></td></tr>
-            {{/rollBetween() askTheOracle 1 10}}
-            {{#rollBetween() askTheOracle 11 20}}
+            {{/rollBetween() endureHarm 1 10}}
+            {{#rollBetween() endureHarm 11 20}}
             <tr><td colspan='2'><span>You are dying. You need to Heal within an hour or two, or <em>Face Death.</em></span></td></tr>
-            {{/rollBetween() askTheOracle 11 20}}
-            {{#rollBetween() askTheOracle 21 35}}
+            {{/rollBetween() endureHarm 11 20}}
+            {{#rollBetween() endureHarm 21 35}}
             <tr><td colspan='2'><span>You are unconscious and out of action. If left alone, you come back to your senses in an hour or two. If you are vulnerable to a foe not inclined to show mercy, <em>Face Death.</em></span></td></tr>
-            {{/rollBetween() askTheOracle 21 35}}
-            {{#rollBetween() askTheOracle 36 50}}
+            {{/rollBetween() endureHarm 21 35}}
+            {{#rollBetween() endureHarm 36 50}}
             <tr><td colspan='2'><span>You are reeling and fighting to stay conscious. If you engage in any vigorous activity (such as running or fighting) before taking a breather for a few minutes, roll on this table again (before resolving the other move).</span></td></tr>
-            {{/rollBetween() askTheOracle 36 50}}
-            {{#rollBetween() askTheOracle 51 100}}
+            {{/rollBetween() endureHarm 36 50}}
+            {{#rollBetween() endureHarm 51 100}}
             <tr><td colspan='2'><span>You are battered but still standing.</span></td></tr>
-            {{/rollBetween() askTheOracle 51 100}}
+            {{/rollBetween() endureHarm 51 100}}
         {{/endureHarm}}
         {{#endureStress}}
-            {{#rollBetween() askTheOracle 1 10}}
+            {{#rollBetween() endureStress 1 10}}
             <tr><td colspan='2'><span>You are overwhelmed. <em>Face Desolation.</em></span></td></tr>
-            {{/rollBetween() askTheOracle 1 10}}
-            {{#rollBetween() askTheOracle 11 25}}
+            {{/rollBetween() endureStress 1 10}}
+            {{#rollBetween() endureStress 11 25}}
             <tr><td colspan='2'><span>You give up. <em>Forsake Your Vow</em> (if possible, one relevant to your current crisis).</span></td></tr>
-            {{/rollBetween() askTheOracle 11 25}}
-            {{#rollBetween() askTheOracle 26 50}}
+            {{/rollBetween() endureStress 11 25}}
+            {{#rollBetween() endureStress 26 50}}
             <tr><td colspan='2'><span>You give in to a fear or compulsion, and act against your better instincts.</span></td></tr>
-            {{/rollBetween() askTheOracle 26 50}}
-            {{#rollBetween() askTheOracle 51 100}}
+            {{/rollBetween() endureStress 26 50}}
+            {{#rollBetween() endureStress 51 100}}
             <tr><td colspan='2'><span>You persevere.</span></td></tr>
-            {{/rollBetween() askTheOracle 51 100}}
+            {{/rollBetween() endureStress 51 100}}
         {{/endureStress}}
     </table>
 </rolltemplate>
